# postal_py

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  setup.cfg
postal_py/: __init__.py
postal_py/api/: async_wrapper.py  base.py  exceptions.py  schemas.py  wrapper.py
postal_py/smtp/: async_wrapper.py  base.py  schemas.py  wrapper.py
